--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="start"
+    android:fontFamily="@font/inter"
+    android:textSize="20sp"
+    android:textColor="@color/light_accent_txt">
 
     <include
         android:id="@+id/app_bar_main"
