Added nav drawer functionality and placeholder text

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,26 +14,26 @@
 
     <fragment
         android:id="@+id/nav_month"
-        android:name="com.mobdeve.s11.mco11.animocalendar.ui.home.HomeFragment"
+        android:name="com.mobdeve.s11.mco11.animocalendar.MonthFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_week"
-        android:name="com.mobdeve.s11.mco11.animocalendar.ui.home.HomeFragment"
+        android:name="com.mobdeve.s11.mco11.animocalendar.WeekFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_day"
-        android:name="com.mobdeve.s11.mco11.animocalendar.ui.home.HomeFragment"
+        android:name="com.mobdeve.s11.mco11.animocalendar.DayFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
     <!-- Settings group -->
     <fragment
         android:id="@+id/nav_preferences"
-        android:name="com.mobdeve.s11.mco11.animocalendar.ui.home.HomeFragment"
+        android:name="com.mobdeve.s11.mco11.animocalendar.PreferencesFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
@@ -45,14 +45,14 @@
 
     <fragment
         android:id="@+id/nav_change_theme"
-        android:name="com.mobdeve.s11.mco11.animocalendar.ui.home.HomeFragment"
+        android:name="com.mobdeve.s11.mco11.animocalendar.ThemesFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
     <!-- Miscellaneous group -->
     <fragment
         android:id="@+id/nav_help"
-        android:name="com.mobdeve.s11.mco11.animocalendar.ui.home.HomeFragment"
+        android:name="com.mobdeve.s11.mco11.animocalendar.HelpFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
