--- a/app/src/main/res/layout/fragment_themes.xml
+++ b/app/src/main/res/layout/fragment_themes.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".ThemesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:gravity="center_horizontal|center_vertical"
+        android:text="THEMES VIEW"
+        android:textSize="34sp" />
 
 </FrameLayout>
