--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,26 +15,26 @@
     <fragment
         android:id="@+id/nav_month"
         android:name="com.mobdeve.s11.mco11.animocalendar.MonthFragment"
-        android:label="@string/menu_home"
+        android:label="JANUARY 2024"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_week"
         android:name="com.mobdeve.s11.mco11.animocalendar.WeekFragment"
-        android:label="@string/menu_home"
+        android:label="JANUARY 2024"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_day"
         android:name="com.mobdeve.s11.mco11.animocalendar.DayFragment"
-        android:label="@string/menu_home"
+        android:label="JANUARY 2024"
         tools:layout="@layout/fragment_home" />
 
     <!-- Settings group -->
     <fragment
         android:id="@+id/nav_preferences"
         android:name="com.mobdeve.s11.mco11.animocalendar.PreferencesFragment"
-        android:label="@string/menu_home"
+        android:label="Preferences"
         tools:layout="@layout/fragment_home" />
 
 <!--    <fragment-->
@@ -46,14 +46,14 @@
     <fragment
         android:id="@+id/nav_change_theme"
         android:name="com.mobdeve.s11.mco11.animocalendar.ThemesFragment"
-        android:label="@string/menu_home"
+        android:label="Change Calendar Theme"
         tools:layout="@layout/fragment_home" />
 
     <!-- Miscellaneous group -->
     <fragment
         android:id="@+id/nav_help"
         android:name="com.mobdeve.s11.mco11.animocalendar.HelpFragment"
-        android:label="@string/menu_home"
+        android:label="Help"
         tools:layout="@layout/fragment_home" />
 
 <!--    <fragment-->
