--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,7 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/inter</item>
+        <item>@font/inter_bold</item>
         <item>@font/istok_web</item>
         <item>@font/istok_web_bold</item>
     </array>
