--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/inter</item>
         <item>@font/inter_bold</item>
+        <item>@font/inter_medium</item>
         <item>@font/istok_web</item>
         <item>@font/istok_web_bold</item>
     </array>
