Changed navbar to accommodate activities. Changed views to activities instead of fragments.

--- a/app/src/main/res/layout/content_layout.xml
+++ b/app/src/main/res/layout/content_layout.xml
@@ -19,6 +19,11 @@
             app:popupTheme="@style/Theme.AnimoCalendar.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
+    
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/activityContainer" />
 
     <include layout="@layout/content_main" />
 
