Updated theme attributes

--- a/app/src/main/res/layout/main_drawer_header.xml
+++ b/app/src/main/res/layout/main_drawer_header.xml
@@ -20,7 +20,7 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Calendar"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@color/light_accent_txt"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +34,7 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="ANIMO"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@color/light_accent_txt"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
