--- a/app/src/main/res/layout/fragment_view_event.xml
+++ b/app/src/main/res/layout/fragment_view_event.xml
@@ -34,7 +34,7 @@
             android:layout_marginStart="153dp"
             android:layout_marginEnd="153dp"
             android:layout_marginBottom="45dp"
-            android:backgroundTint="@color/light_accent"
+            android:backgroundTint="?attr/colorPrimary"
             android:stateListAnimator="@null"
             android:text="EDIT"
             app:cornerRadius="7dp"
