--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme (Dark Mode) -->
-    <style name="Theme.AnimoCalendar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.AnimoCalendar" parent="Theme.Material3.Dark">
         <!-- Primary brand color -->
         <item name="colorPrimary">@color/light_accent</item>
         <item name="colorPrimaryVariant">@color/light_accent_variant</item>
