--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,21 +3,21 @@
     <style name="Theme.AnimoCalendar" parent="Theme.Material3.Light">
         <!-- Primary brand color -->
         <item name="colorPrimary">@color/light_accent</item>
-        <item name="colorPrimaryVariant">@color/light_accent_variant</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/light_accent_variant</item> <!-- Color used on system bar -->
+        <item name="colorOnPrimary">@color/light_txt</item>
 
         <!-- Secondary brand color -->
         <item name="colorSecondary">@color/light_accent</item>
         <item name="colorSecondaryVariant">@color/light_accent</item>
-        <item name="colorOnSecondary">@color/white</item>
+        <item name="colorOnSecondary">@color/light_txt</item>
 
         <!-- Background color -->
-        <item name="android:colorBackground">@color/white</item>
-        <item name="colorOnBackground">@color/light_accent</item> <!-- Color used on navbar -->
-        <item name="colorOnBackground2">@color/black</item> <!-- Color used on calendar -->
-        <item name="colorOnBackgroundOutline">@color/light_outline</item> <!-- Color used for calendar outline -->
+        <item name="android:colorBackground">@color/light_bg</item>
+        <item name="colorOnBackground">@color/light_accent_txt</item> <!-- Color used on navbar (on the side) -->
+        <item name="colorCalendarText">@color/black</item> <!-- Color used on calendar text -->
+        <item name="colorCalendarOutline">@color/light_outline</item> <!-- Color used for calendar outline -->
 
-        <!-- Status bar color (bar with time, battery, etc.) -->
+        <!-- System bar color (bar with time, battery, etc.) -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
 
         <!-- Customize your theme here. -->
@@ -37,8 +37,59 @@
 
 
     <!-- Halloween Theme -->
+    <style name="Halloween" parent="Theme.Material3.Light">
+        <!-- Primary brand color -->
+        <item name="colorPrimary">@color/hw_accent</item>
+        <item name="colorPrimaryVariant">@color/hw_accent_variant</item>
+        <item name="colorOnPrimary">@color/white</item>
+
+        <!-- Secondary brand color -->
+        <item name="colorSecondary">@color/hw_accent</item>
+        <item name="colorSecondaryVariant">@color/hw_accent</item>
+        <item name="colorOnSecondary">@color/white</item>
+
+        <!-- Background color -->
+        <item name="android:colorBackground">@color/hw_bg</item>
+        <item name="colorOnBackground">@color/hw_accent_txt</item> <!-- TODO -->
+        <item name="colorCalendarText">@color/white</item>
+        <item name="colorCalendarOutline">@color/hw_outline</item>
+    </style>
 
     <!-- Valentines Theme -->
+    <style name="Valentines" parent="Theme.Material3.Light">
+        <!-- Primary brand color -->
+        <item name="colorPrimary">@color/val_accent</item>
+        <item name="colorPrimaryVariant">@color/val_accent_variant</item>
+        <item name="colorOnPrimary">@color/white</item>
+
+        <!-- Secondary brand color -->
+        <item name="colorSecondary">@color/val_accent</item>
+        <item name="colorSecondaryVariant">@color/val_accent</item>
+        <item name="colorOnSecondary">@color/white</item>
+
+        <!-- Background color -->
+        <item name="android:colorBackground">@color/val_bg</item>
+        <item name="colorOnBackground">@color/val_accent</item> <!-- TODO -->
+        <item name="colorCalendarText">@color/white</item>
+        <item name="colorCalendarOutline">@color/val_outline</item>
+    </style>
 
     <!-- Christmas Theme -->
+    <style name="Christmas" parent="Theme.Material3.Light">
+        <!-- Primary brand color -->
+        <item name="colorPrimary">@color/xmas_accent</item>
+        <item name="colorPrimaryVariant">@color/xmas_accent_variant</item>
+        <item name="colorOnPrimary">@color/white</item> <!-- TODO -->
+
+        <!-- Secondary brand color -->
+        <item name="colorSecondary">@color/xmas_accent</item>
+        <item name="colorSecondaryVariant">@color/xmas_accent</item>
+        <item name="colorOnSecondary">@color/white</item>
+
+        <!-- Background color -->
+        <item name="android:colorBackground">@color/xmas_bg</item>
+        <item name="colorOnBackground">@color/xmas_accent</item> <!-- TODO -->
+        <item name="colorCalendarText">@color/white</item>
+        <item name="colorCalendarOutline">@color/xmas_outline</item>
+    </style>
 </resources>
